infra/envoy-ai-gateway/examples/self-hosted-model.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-ai-gateway-class
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-ai-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-ai-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      # routes:
      #   kind: HTTPRoute
      #   selector:
      #     matchLabels:
      #       app.kubernetes.io/name: envoy-ai-gateway
      #   namespaceSelector:
      #     matchLabels:
      #       app.kubernetes.io/name: envoy-ai-gateway
